--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,11 @@
-<%= Time.now %>
+<h1>Welcome to your Cookbook</h1>
 
-<% @usernames.each do |username| %>
-  <li>
-    <%= username %>
-  </li>
-<% end %>
+<p>You currently have in your cookbook:</p>
+
+<ul>
+  <% @recipes.each_with_index do |recipe, index| %>
+    <li><%= recipe.name %>: <%= recipe.description %> - <a href="/recipes/<%= index %>">Destroy</a></li>
+  <% end %>
+</ul>
+
+<a href="/new">Add a recipe</a>
